tests/parser/bug_78/invalid_10.m.out
In invalid_10.m, line 4
| disp foo'( %
|         ^ lex error: this command form string is not terminated properly
In invalid_10.m, line 4
| disp foo'( %
|      ^^^^^^^ style: end statement with a semicolon
----------------------------------------------------------------------
--  Parse tree for invalid_10.m
Root: Script_File
  Statements: Sequence_Of_Statements
    Statements: Naked_Expression_Statement
      Expression: Command form Function_Call
        Name: Identifier <disp>
        Arguments: Char_Array_Literal 'foo( %'
----------------------------------------------------------------------
MISS_HIT Debug Summary: 1 file(s) analysed, 1 style issue(s), 1 error(s)
