tests/parser/bug_78/invalid_10.m
%% (c) Copyright 2020 Florian Schanda

% MATLAB errors with "Character vector is not terminated properly"
disp foo'( %
